--- a/index.css
+++ b/index.css
@@ -1,43 +1,194 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:after,
+blockquote:before,
+q:after,
+q:before {
+    content: "";
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap");
+
+* {
+    box-sizing: border-box;
+    font-family: "Roboto Mono", monospace;
+}
+
+nav {
+    width: 100%;
+    text-align: center;
+}
+
+nav a {
+    display: inline-block;
+    width: 10%;
+    padding: 1%;
+    border-radius: 20px;
+    margin: 5% 10%;
+    height: 5rem;
+    font-size: 1.5rem;
+    justify-content: space-evenly;
+    align-items: center;
+    color: white;
+    text-decoration: none;
+}
+
+a#plan {
+    background-color: #ff764e;
+}
+
+a#learn {
+    background-color: #5ed3eb;
+}
+
+a#get {
+    background-color: #ffcd69;
+}
+
+#intro span {
+    width: 40%;
+}
+
+#intro img {
+    border-radius: 50%;
+    height: 25rem;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 0 2%;
+}
+
+#intro span#words {
+    display: inline-block;
+    flex-direction: column;
+    text-align: center;
+    line-height: 1.7;
+    font-size: 1.4rem;
+    margin: 0 0 0 20rem;
+    padding: 2rem;
+}
+
+h1 {
+    font-family: "Chelsea Market", cursive;
+    font-size: 3.6rem;
+    width: 100%;
+}
+
+#p1 {
+    width: 85%;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#p2 {
+    width: 70%;
+    margin: 0 auto;
+}
+
+#history {
+    background-color: #ddb9a3;
+    width: 90%;
+    font-size: 1.4rem;
+    line-height: 1.4;
+    color: white;
+    margin: 5% auto;
+    text-align: center;
+}
+
+#explain {
+    width: 20%;
+    margin: 2% auto;
+    text-align: center;
+    font-size: 1.2rem;
+    line-height: 1.2;
+}
+
+#explain img {
+    height: 15rem;
+    width: 15rem;
+    margin: 2rem;
+}
+
+#explain span {
+    font-weight: bold;
+}
+
+footer img {
+    width: 100%;
+    height: 20rem;
+    position: relative;
+    top: 2500;
+
+    right: 0;
+    z-index: 1;
+    border
+}
+
+footer {
+    background-color: #f9e7dc;
+    width: 100%;
+    z-index: 10;
+    position: inherit;
+    top;
+    right: 0;
+}
+
+footer nav a {
+    display: inline-block;
+    width: 10%;
+    padding: 1%;
+    border-radius: 20px;
+    margin: 5% 10%;
+    height: 5rem;
+    font-size: 1.5rem;
+    justify-content: space-evenly;
+    align-items: center;
+    color: white;
+    text-decoration: none;
+
+}
+
+footer nav a#plan {
+    background-color: #ff764e;
+}
+
+footer a#learn {
+    background-color: #5ed3eb;
+}
+
+a {
+    background-color: #ffcd69;
 }
